== 1.1.4

* Major changes
 * Added 'remove_from_db' method to remove a site from the database.

== 1.1.3 2011-11-09

* Major changes
 * Does not expire compiled templates when working in dev mode by default.
 * Added 'monolingual' option for virtual classes. All TextDocuments are monolingual
   by default.

== 1.1.2 2011-11-09

* Minor changes
 * Support sorting by scope index fields.
 * Fixed bug in math brick (using Open4 instead of system with redirections).
 * Added 'change_prop' method in console.
 * Fixed a bug with 404 pages not showing in the correct language.
 * Fixed a bug with properties called 'copy' not working as expected.
 * Added <r:style> tag for dynamic CSS.
 * Added support for 'value' in 'date' input fields.
 * Added comment on property definition.
 * Added 'coalesce' method in queries.
 * Added 'asset_host?' in Acl queries.

== 1.1.1 2011-07-12

* Minor changes
 * Fixed scoped DOM ids in saved template.
 * Cosmetic changes to backend.css (menu on the left).

== 1.1.0 2011-07-11

* Major changes
 * Fixed 'cached_pages' indexing.
 * Added support for haproxy and init.d scripts in cap deploy rules.
 * Added support for upvalues (variables defined in siblings above).
 * Added mode and format filters to Acl rules.
 * Added Selenium testing
   ** > rake zena:test_server (cleans zafu, setup fixtures, start server)
   ** > rake test:acceptance
 * Using up instead of first element in list_context as 'this' (use "first" to obtain old behavior)
 * Enabled specializable static skins (with proper class loading) to ease code reuse and enable filesystem based development.
 * Created "Single" brick to ease deployment on shared hosting.

* Minor changes
 * Fixed 'prefix' option on [url].
 * Console methods now accept SQLiss.
 * Admin interface top link moves to page.
 * Fixed a bug in date parsing: links should use contextual timezone.
 * Added 'versions' safe method to return list of versions for a node.