@@ -1,0 +1,41 @@
+@old_title = 'Collections'
+@new_title = 'New Collections'
+
+open '/oo/testnode37.html?test=edit5'
+set_timeout 4000
+assert_element_not_present 'edit51_title'
+verify_text "css=#edit51_32 .title", @old_title
+
+# edit
+click 'link=edit'
+wait_for_element_present 'edit51_title'
+type 'edit51_title', @new_title
+
+# submit
+click 'css=input[type=submit]'
+wait_for_element_not_present 'edit51_title'
+verify_text "css=#edit51_32 .title", @new_title
+
+# edit again
+click 'link=edit'
+wait_for_element_present 'edit51_title'
+
+# cancel
+click 'css=img[alt="cancel"]'
+wait_for_element_not_present 'edit51_title'
+
+# edit again
+click 'link=edit'
+wait_for_element_present 'edit51_title'
+# Ensure we do proper ajax replacements
+assert_element_not_present 'css=#edit5 form form'
+type 'edit51_title', @old_title
+
+# submit
+click 'css=input[type=submit]'
+wait_for_element_not_present 'edit51_title'
+verify_text "css=#edit51_32 .title", @old_title
+
+# ensure changes are recorded
+open '/oo/testnode37.html?test=edit5'
+verify_text "css=#edit51_32 .title", @old_title
