@@ -3,6 +3,10 @@
 * Major changes
  * Added 'remove_from_db' method to remove a site from the database.
 
+* Minor changes
+ * Enabled Acl during document upload.
+ * Fixed a bug when using [edit] in a list with [add].
+
 == 1.1.3 2011-11-09
 
 * Major changes
